# SonarJS

./: .cirrus.star  .cirrus.template.yml  .cirrus.yml  .cix.yml  .eslint-doc-generatorrc.cjs  .eslintrc.js  .fossa.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lolo_setup.sh  .mise.toml  .nycrc  .odzrc.toml  .pmgrc.toml  .prettierignore  .travis.yml  AGENTS.md  CLAUDE.md  COVERAGE_IMPROVEMENT_GUIDE.md  Dockerfile  JS-285-reproducer-ts-proto-fail.json  JS-285-reproducer-ts-proto.json  Jenkinsfile  NOTICE.txt  PLAN.md  PLAN_CSS_GRPC_SUPPORT.md  README.md  SECURITY.md  analysis-result.txt  buf.gen.yaml  check-license-compliance.sh  cix.sh  deno.json  esbuild-common.mjs  esbuild-grpc.mjs  esbuild.mjs  eslint-patch  eslint.config.js  (+42 more)
.cirrus/: Dockerfile  alpine.Dockerfile  analyze.bash  burgr-notify-promotion.sh  cirrus-env.sh  denojs.Dockerfile  deploy.bash  nodejs-10.Dockerfile  nodejs-12.Dockerfile  nodejs-14.Dockerfile  nodejs-16.Dockerfile  nodejs-20.Dockerfile  nodejs-8.Dockerfile  nodejs-lts.Dockerfile  (+10 more)
dev-tools/diffsit/: Cargo.toml
dev-tools/diffsit/src/: fingerprint.rs  lib.rs  main.rs  models.rs
dev-tools/diffsit/src/resources/: report.css  report.js
dev-tools/scripts/: pyproject.toml
dev-tools/scripts/sit_pr_diffsit/: __init__.py  prepare_diffsit_inputs.py  summarize_diffsit_reports.py
dev-tools/scripts/sit_pr_fps/: build_publish_payload.py  common.py  detect_changed_rules.py  normalize_sit_bundles.py  publish_pr_comment.py  run_fps_batch.py  summarize_fps_results.py
dev-tools/scripts/tests/: test_prepare_diffsit_inputs.py
(+23788 files in other folders)
